# unofficial-vfsc-graph

./: .env.example  .gitignore  README.md  TODO.txt  docker-compose.production.yml  docker-compose.yml
scraper/: .gitignore  Dockerfile  pyproject.toml  scrapy.cfg  test-sqlite.py
scraper/vfscscraper/: database.py  items.py  middlewares.py  pipelines.py  settings.py
scraper/vfscscraper/spiders/: utils.py  vfsc.py
web/: .gitignore  Dockerfile  HOME.md  config.py  gunicorn_conf.py  pyproject.toml  start.sh
web/app/: background_tasks.py  db.py  graph.py  graph_utils.py  home.py  main.py  utils.py
web/app/db/: app_db.py  graph_db.py
web/app/pages/: privacy-policy.md  terms-and-conditions.md
web/app/static/: site.webmanifest
web/app/static/css/: main.css
web/app/static/icons/: about.txt
web/app/static/js/: cytoscape-cose-bilkent.js  graph.js  header-scroll.js  hero-graph.js  main.js
web/app/templates/: _base.html  _macros.html  base.html  graph.html  graph.html.j2  index.html  list.html  md_page.html  search.html
web/app/templates/home/: call-to-action.html  faq.html  featured-pages.html  hero.html  how-its-made.html
web/app/templates/partials/: footer.html  header.html  navbar.html  scripts.html
web/app/views/: graph_view.py  home_view.py
web/tests/unit/: conftest.py  test_main.py
web/tests/unit/dash/: test_commodities.py  test_common.py
